--- a/templates/index.html
+++ b/templates/index.html
@@ -420,6 +420,7 @@
                                 <option value="Open">Open</option>
                                 <option value="Completed">Completed</option>
                                 <option value="Feedback">Feedback</option>
+                                <option value="Dead Lead">Dead Lead</option>
                             </select>
                         </div>
 
